--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: stratification
 Type: Package
-Title: Univariate stratification of Survey Populations
-Version: 2.0-0
-Date: 2010-03-11
+Title: Univariate Stratification of Survey Populations
+Version: 2.0-1
+Date: 2010-04-06
 Author: Sophie Baillargeon <Sophie.Baillargeon@mat.ulaval.ca> and
         Louis-Paul Rivest <Louis-Paul.Rivest@mat.ulaval.ca>
 Maintainer: Sophie Baillargeon <Sophie.Baillargeon@mat.ulaval.ca>
@@ -17,6 +17,6 @@ Description: This package performs univariate stratification of survey
         known cumulative root frequency rule of Dalenius and Hodges and
         the geometric rule of Gunning and Horgan are also implemented.
 License: GPL-2
-Packaged: 2010-03-11 14:48:21 UTC; sobai2
+Packaged: 2010-04-06 17:23:20 UTC; sobai2
 Repository: CRAN
-Date/Publication: 2010-03-11 16:37:58
+Date/Publication: 2010-04-06 17:42:27
