--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: stratification
 Type: Package
 Title: Univariate Stratification of Survey Populations
-Version: 2.0-3
-Date: 2011-02-02
+Version: 2.1-1
+Date: 2012-06-29
 Author: Sophie Baillargeon <Sophie.Baillargeon@mat.ulaval.ca> and
         Louis-Paul Rivest <Louis-Paul.Rivest@mat.ulaval.ca>
 Maintainer: Sophie Baillargeon <Sophie.Baillargeon@mat.ulaval.ca>
 Description: This package performs univariate stratification of survey
-        populations. The main function implements a generalization of
+        populations.  The main function implements a generalization of
         the Lavallee-Hidiroglou method of stratum construction. The
         generalized method takes into account a discrepancy between the
         stratification variable and the survey variable. The
@@ -17,6 +17,6 @@ Description: This package performs univariate stratification of survey
         known cumulative root frequency rule of Dalenius and Hodges and
         the geometric rule of Gunning and Horgan are also implemented.
 License: GPL-2
-Packaged: 2011-02-02 19:11:29 UTC; sobai2
+Packaged: 2012-06-30 02:51:40 UTC; Sophie Baillargeon
 Repository: CRAN
-Date/Publication: 2011-02-03 08:19:39
+Date/Publication: 2012-06-30 05:30:37
